src/it/resources/names.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prom
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
